docs/assets/css/style.scss
/* ... */
/* ----------- TOC BUTTONS --------------- */

button.toggle-toc {
  background: inherit;
  float: right;
  font-size: 2em;
  font-family: $primary-font;
  color: $light;
  border-width: 1px;
  border-color: $light;
  min-width: 1em;
  margin-top: 10px; /* align with H2 */
}

@media screen and (min-width: $sidebar-breakpoint) {
  button.toggle-toc {
    display: none;
  }

  #toc-list {
    display: block;
  }
}

@media screen and (max-width: $sidebar-breakpoint) {
  button.toggle-toc {
    display: inline;
  }

  #toc-list.hidden {
    display: none;
  }

  #toc-list {
    display: block;
  }
}

/* ----------- TOC TABS ------------- */


#toc-tabs-container { 
  background: $white;
}

.tab-content {
  display: none;
}

.tab-panel {
  display: none;
  padding: 10px;
}

.tab-radio {
  position: absolute;
  opacity: 0;
  pointer-events: none;
}

.textonly { 
  display: none;
}

nav#toc-tabs {
   margin-top: 2.5em;

  .tab-strip {
    display: flex;
    gap: 2px;

    a { 

      color: inherit;
      text-decoration: none;

      a:hover { 
        color: inherit;
      } 
    } 

    &.substrip { 
      display: none;
    }

  }

  .substrip .tab-label { 
    font-size: 0.8em;
    margin-top: 0.5em;
  } 

  .tab-label {
    display: flex;
    align-items: center;
    gap: 8px;
    min-height: 1.5em;
    height: auto; 
    padding: 0 1em;
    font-size: 0.875em;
    font-weight: 500;
    cursor: pointer;
    position: relative;
    user-select: none;
    background: $light;
    color: $gray;

    /* 
    border-color: $dark !important;
    border-top: solid;
    border-left: solid;
    border-right: solid;
    */
    padding-left: 0.5em;
    padding-right: 0.5em;
    margin-bottom: 0.5em;
  }

  .tab-panels {
    background: whitesmoke;
    border: 2px solid var(--rule);
    border-top: none;
  }
}

/* ----------- COLLAPSABLE LISTS --------- */

/* Make this button look like a regular link */
button.toggle-button,
button.toggle-button-background {
  color: $blue;
  font-size: smaller;
  border-color: $blue;
  border-left: none;
  border-right: none;
  border-top-width: 1px;
  border-bottom-width: 1px;
  background: inherit;

  &:hover {
    color: $pink;
  }
}

.togglable {
  display: block;

  &.hidden {
    display: none;
  }
}

h2.inline,
h3.inline,
h4.inline {
  display: inline;
}

/* h4 and h3 do not look sufficiently different. */
h4.race-wrapper,
h4.inline {
  font-size: 1.2em;
}

/* Stop buttons from crashing into each other */
div.spacer {
  display: block;
  min-height: 2em;
}

/* Move continuation UL elements up so they look
 * like they merged with the previous lists.
 */
ul.continue {
  margin-top: -15px;
}

.media-list {
  margin-bottom: 1em;
}

.toggletop:hover {
  cursor: pointer;
  border-bottom: 3px solid;
}

.toggle-content {
  display: none;
  max-height: 0;
  transition: all 0.2s ease 0.15s;

  &.active {
    max-height: 100%;
    display: block;

    transition: all 0.35s ease 0.15s;
    margin-bottom: 3em;
  }
}

/* ------------ FOOTER STYLING ----------- */

div.footer {
  font-size: smaller;
}

p.sharing a {
  margin-left: 0.5em;
  margin-right: 0.5em;
}

#footer_wrap {
  background: $dark;
  color: $light;
  position: absolute;
  bottom: 0;

  footer.inner {
    max-width: 1366px;
    padding: 1% 2%;

    p {
      color: $light;
    }

    a {
      color: $light;
      &:hover,
      &:focus {
        color: $pink;
      }
    }

    ul {
      list-style: none;
    }

    .minicaps {
      font-family: $secondary-font;
      font-weight: 700;
    }

    .sharing {
      display: flex;
      justify-content: flex-start;
      flex-wrap: wrap;
      align-items: center;
      border-bottom: 1px solid white;
      padding: 1em 0;

      > div {
        margin-right: 10px;
      }

      a {
        text-decoration: none;
      }

      span.icon {
        height: 24px;
        width: 24px !important;
        padding: 3px;
        border-radius: 20px;
        display: inline-flex;
        align-items: center;
        justify-content: center;

        &:hover {
          background: $pink;
        }
      }

      img {
        height: 18px;
        width: 18px;
      }
    }

    .contact,
    .links {
      padding: 1em 0;

      ul {
        li {
          margin: 0;
        }
      }
    }

    .links {
      ul {
        column-count: 2;
      }
    }

    .footer-columns {
      display: flex;
      flex-wrap: wrap;

      > div {
        flex: 1 0 50%;
      }
    }

    .email {
      display: flex;
      justify-content: flex-start;
      flex-wrap: wrap;
      align-items: center;
      border-top: 1px solid white;
      padding: 1em 0;
    }
  }
}

/* ---------- EMAIL OBFUSCATION ----------- */

/* Email obfuscation, stolen from CivicTechWR page. */
my-email::after {
  content: attr(data-domain);
}

my-email::before {
  content: attr(data-user) "\0040";
}

/* --------- FRONT PAGE ------------- */

/* Make big bold text */
p.bigtext {
  text-align: center;
  font-size: x-large;
}

/* ------ EMBED GOOGLE CALENDAR RESPONSIVELY ----- */

/* Embed Google calendar responsively.
 * See: embedresponsively.com
 */
.embedContainer {
  position: relative;
  padding-bottom: 56.25%;
  overflow: hidden;
  max-width: 100%;

  /* This should probably be rex, but that
     * does not exist. It is not clear whether
     * rem or em is more appropriate.
     */
  /* height: 20em; */
  height: 0;
}

.embedContainer iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* ------ REDO SEARCHABLE MAP ----- */

#map {
  /* float:left; */
  width: 100%;
  height: 40em;
}

#map img {
  margin: 0;
  padding: 0;
}
/* ... */

